blog article page end

--- a/app/blocks/lists/lists.scss
+++ b/app/blocks/lists/lists.scss
@@ -1,5 +1,13 @@
 .list {
   @include list;
+
+  li {
+    line-height: 1.45;
+
+    @include screen('sm') {
+      line-height: 1.2;
+    }
+  }
 }
 
 ul.list {
