--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -1,6 +1,7 @@
 include ../blocks/accordion/accordion
 include ../blocks/add-button/add-button
 include ../blocks/address-list/address-list
+include ../blocks/article/article
 include ../blocks/avatar/avatar
 include ../blocks/box/box
 include ../blocks/boxes/boxes
