--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -14,7 +14,7 @@ block content
         +link(href="host-spaces.html") My rental offers (HOST) (host-spaces.html)
         +link(href="host-space-offers.html") My rental offers - One Space (HOST) (host-space-offers.html)
         //- +link(href="blog.html") Blog (blog.html)
-        //- +link(href="blog-article.html") Blog article (blog-article.html)
+        +link(href="blog-article.html") Blog article (blog-article.html)
 
 block panels
   +main-menu
