--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -3,6 +3,8 @@ include ../blocks/add-button/add-button
 include ../blocks/address-list/address-list
 include ../blocks/article/article
 include ../blocks/avatar/avatar
+include ../blocks/blog-news/blog-news
+include ../blocks/blog/blog
 include ../blocks/box/box
 include ../blocks/boxes/boxes
 include ../blocks/breadcrumbs/breadcrumbs
@@ -45,6 +47,7 @@ include ../blocks/offers/offers
 include ../blocks/overlay/overlay
 include ../blocks/page-title/page-title
 include ../blocks/page/page
+include ../blocks/pagination/pagination
 include ../blocks/panel/panel
 include ../blocks/popups/popups
 include ../blocks/put-block-into-slot/put-block-into-slot
