--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -90,6 +90,9 @@ $color-gray-lighter: #959fad;
 $color-status-bg: #a7afb8;
 $color-offer-empty-text: #848d99;
 $color-border-dark: #919494;
+$color-news-bg: #252b34;
+$color-news-hover-title: #181f28;
+$color-news-hover-text: #0a0d11;
 
 
 // ##########
